force-app/main/default/objects/Opportunity/fields/OpportunityExtId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityExtId__c</fullName>
    <description>External ID used by loaders to reference Opportunity records.</description>
    <externalId>true</externalId>
    <label>Opportunity External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>