force-app/main/default/objects/Opportunity/fields/Original_Opp_ExtId__c.field-meta.xml
<CustomField>
    <fullName>Original_Opp_ExtId__c</fullName>
    <description>External ID of the original Opportunity for renewals or upsells.</description>
    <label>Original Opportunity External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>