force-app/main/default/objects/Opportunity/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <description>Indicates whether this Opportunity is a renewal or expansion.</description>
    <defaultValue>false</defaultValue>
    <label>Renewal</label>
    <type>Checkbox</type>
</CustomField>